fix spacing around image in nav

--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -154,7 +154,7 @@ nav > a:hover {
   text-decoration: underline;
 }
 
-nav > img.logo {
+nav > a > img.logo {
   margin-left: 30px;
 }
 
